--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
 
     <artifactId>tigase-http-api-jetty</artifactId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.1</version>
     <packaging>bundle</packaging>
 
     <name>Tigase HTTP API - Jetty</name>
@@ -37,7 +37,7 @@
         <connection>scm:git:${scm_repo_base}/tigase-http-api-jetty.git</connection>
         <developerConnection>scm:git:${scm_repo_base}/tigase-http-api-jetty.git</developerConnection>
         <url>https://projects.tigase.org/projects/tigase-http-api-jetty/repository</url>
-        <tag>tigase-http-api-jetty-2.2.0</tag>
+        <tag>tigase-http-api-jetty-2.2.1</tag>
     </scm>
 
     <organization>
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>tigase</groupId>
             <artifactId>tigase-http-api</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
