--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
 
     <artifactId>tigase-http-api-jetty</artifactId>
-    <version>2.3.0</version>
+    <version>2.3.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Tigase HTTP API - Jetty</name>
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>tigase</groupId>
             <artifactId>tigase-http-api</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
